[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "web"
path = "src/main.rs"

[dependencies]
common = {path = "../common"}
rocket = {version = "0.5.0-rc.1", features = ["json"]}
serde = "1.0.133"

