[package]
name = "rustystack-backend"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "backend"
path = "src/main.rs"

[dev-dependencies]
reqwest = "0.11"

[dependencies]
rustystack-common = {path = "../rustystack-common"}
# rocket = {version = "0.5.0-rc.1", features = ["json"]}
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1.0.133"
